force-app/main/default/objects/Lead/fields/Address_1_and_2_O__c.field-meta.xml
<CustomField>
    <fullName>Address_1_and_2_O__c</fullName>
    <label>Address 1 and 2 (O)</label>
    <type>TextArea</type>
</CustomField>