force-app/main/default/objects/Lead/fields/Address_1_and_2_R__c.field-meta.xml
<CustomField>
    <fullName>Address_1_and_2_R__c</fullName>
    <label>Address 1 and 2 (R)</label>
    <type>TextArea</type>
</CustomField>