force-app/main/default/objects/Lead/fields/Adgroup__c.field-meta.xml
<CustomField>
    <fullName>Adgroup__c</fullName>
    <label>Adgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>