force-app/main/default/objects/Lead/fields/Adposition__c.field-meta.xml
<CustomField>
    <fullName>Adposition__c</fullName>
    <label>Ad position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>