force-app/main/default/objects/Lead/fields/Agent_Extension__c.field-meta.xml
<CustomField>
    <fullName>Agent_Extension__c</fullName>
    <formula>Owner:User.BitVoice_Agent_Ext__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Extension</label>
    <type>Text</type>
</CustomField>