force-app/main/default/objects/Lead/fields/Alternate_Address_City_del__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_City_del__c</fullName>
    <label>Alternate Address City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>