force-app/main/default/objects/Lead/fields/Alternate_Address_Country_del__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Country_del__c</fullName>
    <label>Alternate Address Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>