force-app/main/default/objects/Lead/fields/Alternate_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Postal_Code__c</fullName>
    <label>Alternate Address Postal Code</label>
    <type>TextArea</type>
</CustomField>