force-app/main/default/objects/Lead/fields/Alternate_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Street__c</fullName>
    <label>Alternate Address Street</label>
    <type>TextArea</type>
</CustomField>