force-app/main/default/objects/Lead/fields/Alternate_Email_Id_E__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Id_E__c</fullName>
    <label>Alternate Email Id (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>