force-app/main/default/objects/Lead/fields/Alternate_Mobile_Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Hash_Value__c</fullName>
    <label>Alternate Mobile Hash Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>