force-app/main/default/objects/Lead/fields/Alternate_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Number__c</fullName>
    <label>Alternate Mobile Number</label>
    <type>Phone</type>
</CustomField>