force-app/main/default/objects/Lead/fields/Are_you_looking_for__c.field-meta.xml
<CustomField>
    <fullName>Are_you_looking_for__c</fullName>
    <label>Which Property you are looking for?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>