force-app/main/default/objects/Lead/fields/Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign</label>
    <type>Checkbox</type>
</CustomField>