force-app/main/default/objects/Lead/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <label>Batch Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>