force-app/main/default/objects/Lead/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <label>Bid Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>