force-app/main/default/objects/Lead/fields/Budget_In_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_Lacs__c</fullName>
    <label>Budget (In Mn)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.7 Mil – 1.5 Mil</fullName>
            </value>
            <value>
                <fullName>1.5 Mil – 3 Mil</fullName>
            </value>
            <value>
                <fullName>3 Mil – 5.5 Mil</fullName>
            </value>
            <value>
                <fullName>5.5 Mil – 8 Mil</fullName>
            </value>
            <value>
                <fullName>8 Mil – 12.5 Mil</fullName>
            </value>
            <value>
                <fullName>12.5 Mil &amp; above</fullName>
            </value>
            <value>
                <fullName>Upto 2,18,000 USD</fullName>
            </value>
            <value>
                <fullName>2,18,000 USD- 4,08,000 USD</fullName>
            </value>
            <value>
                <fullName>4,08,000 USD - 5,50,00 USD</fullName>
            </value>
            <value>
                <fullName>1.36 MN USD - 2.1 MN USD</fullName>
            </value>
            <value>
                <fullName>2.1 MN USD - 2.72 MN USD</fullName>
            </value>
            <value>
                <fullName>2.72 MN USD - 3.26 MN USD</fullName>
            </value>
            <value>
                <fullName>4 MN USD- 5.45 MN USD</fullName>
            </value>
            <value>
                <fullName>5.45 MN USD &amp; Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>