force-app/main/default/objects/Lead/fields/Budget_In_lacs_Number__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_lacs_Number__c</fullName>
    <label>Budget (In Mn)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>