force-app/main/default/objects/Lead/fields/Budgett__c.field-meta.xml
<CustomField>
    <fullName>Budgett__c</fullName>
    <label>What is your maximum budget for property</label>
    <length>100</length>
    <type>Text</type>
</CustomField>