force-app/main/default/objects/Lead/fields/CalendarDate__c.field-meta.xml
<CustomField>
    <fullName>CalendarDate__c</fullName>
    <label>CalendarDate</label>
    <type>Date</type>
</CustomField>