force-app/main/default/objects/Lead/fields/Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt_Status__c</fullName>
    <label>Call Attempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Actioned</fullName>
            </value>
            <value>
                <fullName>Not Actioned</fullName>
            </value>
            <value>
                <fullName>Visit confirmed</fullName>
            </value>
            <value>
                <fullName>Visit proposed</fullName>
            </value>
            <value>
                <fullName>Junk Lead</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Not Actioned - No Shuffle</fullName>
            </value>
            <value>
                <fullName>Not Shuffle</fullName>
            </value>
            <value>
                <fullName>Recycled Lead</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Follow up - email</fullName>
            </value>
            <value>
                <fullName>Follow up - social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>