force-app/main/default/objects/Lead/fields/callBackTime__c.field-meta.xml
<CustomField>
    <fullName>callBackTime__c</fullName>
    <label>Looking for Investment or Residence?</label>
    <type>DateTime</type>
</CustomField>