force-app/main/default/objects/Lead/fields/Campaign_Error_Subject__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Error_Subject__c</fullName>
    <defaultValue>&quot;Lead Created Without Campaign Tagging(Manual)&quot;</defaultValue>
    <label>Campaign Error Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>