force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kabul</fullName>
            </value>
            <value>
                <fullName>Algiers</fullName>
            </value>
            <value>
                <fullName>Oran</fullName>
            </value>
            <value>
                <fullName>Luanda</fullName>
            </value>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Cordoba</fullName>
            </value>
            <value>
                <fullName>La Matanza</fullName>
            </value>
            <value>
                <fullName>Rosario</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Moron</fullName>
            </value>
            <value>
                <fullName>La Plata</fullName>
            </value>
            <value>
                <fullName>San Miguel De Tucumán</fullName>
            </value>
            <value>
                <fullName>Lomas De Zamora</fullName>
            </value>
            <value>
                <fullName>Yerevan</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Gold Coast-Tweed</fullName>
            </value>
            <value>
                <fullName>Vienna</fullName>
            </value>
            <value>
                <fullName>Baku</fullName>
            </value>
            <value>
                <fullName>Dhaka</fullName>
            </value>
            <value>
                <fullName>Chittagong</fullName>
            </value>
            <value>
                <fullName>Khulna</fullName>
            </value>
            <value>
                <fullName>Minsk</fullName>
            </value>
            <value>
                <fullName>Brussels</fullName>
            </value>
            <value>
                <fullName>Cotonou</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>