force-app/main/default/objects/Lead/fields/Common_Floor_Details__c.field-meta.xml
<CustomField>
    <fullName>Common_Floor_Details__c</fullName>
    <label>Common Floor Details</label>
    <type>TextArea</type>
</CustomField>