force-app/main/default/objects/Lead/fields/Common_Floor_Project_Locality__c.field-meta.xml
<CustomField>
    <fullName>Common_Floor_Project_Locality__c</fullName>
    <label>Common Floor Project Locality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist 1</fullName>
            </value>
            <value>
                <fullName>Picklist 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>