force-app/main/default/objects/Lead/fields/Configuration_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Configuration_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuration</label>
    <type>Checkbox</type>
</CustomField>