force-app/main/default/objects/Lead/fields/Count_of_Non_Contactable_Calls__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Non_Contactable_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Non-Contactable Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>