force-app/main/default/objects/Lead/fields/CP_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>CP_Mobile_Number__c</fullName>
    <label>CP Mobile Number</label>
    <type>Phone</type>
</CustomField>