force-app/main/default/objects/Lead/fields/Current_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Profile_Name__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Profile Name</label>
    <type>Text</type>
</CustomField>