force-app/main/default/objects/Lead/fields/Dataload_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Dataload_Identifier__c</fullName>
    <label>Dataload Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>