force-app/main/default/objects/Lead/fields/Date_and_Time_of_Unserviced_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Unserviced_Lead__c</fullName>
    <label>Date and Time of Unserviced Lead</label>
    <type>DateTime</type>
</CustomField>