force-app/main/default/objects/Lead/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <label>DID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>