force-app/main/default/objects/Lead/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>