force-app/main/default/objects/Lead/fields/Enquiry_Mode_System__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Mode_System__c</fullName>
    <label>Inquiry Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Personal Visit - Site</fullName>
            </value>
            <value>
                <fullName>Personal Visit - HO</fullName>
            </value>
            <value>
                <fullName>Personal Visit - Exhibition</fullName>
            </value>
            <value>
                <fullName>Personal Visit - Commercial Site</fullName>
            </value>
            <value>
                <fullName>Historical Data - Sell.do</fullName>
            </value>
            <value>
                <fullName>Personal Visit - Event</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>