force-app/main/default/objects/Lead/fields/Estimated_Timeline_for_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Timeline_for_Purchase__c</fullName>
    <label>Estimated Timeline for Purchase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>