force-app/main/default/objects/Lead/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <description>Event code picklist values are manually selected and tagged to the leads.</description>
    <label>Event Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telesales_AUH_Event_1</fullName>
            </value>
            <value>
                <fullName>Telesales_Hyderabad_13_July</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>