force-app/main/default/objects/Lead/fields/Expected_Level_of_Usage__c.field-meta.xml
<CustomField>
    <fullName>Expected_Level_of_Usage__c</fullName>
    <label>Expected Level of Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Self Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>