force-app/main/default/objects/Lead/fields/Facebook_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_ID__c</fullName>
    <label>Facebook Ad ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>