force-app/main/default/objects/Lead/fields/Facebook_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Ad_Name__c</fullName>
    <label>Facebook Ad Name</label>
    <type>TextArea</type>
</CustomField>