force-app/main/default/objects/Lead/fields/Facebook_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Form_Name__c</fullName>
    <label>Facebook Form Name</label>
    <type>TextArea</type>
</CustomField>