force-app/main/default/objects/Lead/fields/Facebook_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Page_Name__c</fullName>
    <label>Facebook Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>