force-app/main/default/objects/Lead/fields/Fb_Lead_Creation_date__c.field-meta.xml
<CustomField>
    <fullName>Fb_Lead_Creation_date__c</fullName>
    <label>Fb Lead Creation date</label>
    <type>DateTime</type>
</CustomField>