force-app/main/default/objects/Lead/fields/First_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempt_Status__c</fullName>
    <label>First Presales Next Call Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>