force-app/main/default/objects/Lead/fields/First_Call_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempted_By__c</fullName>
    <label>Presales First Call Attempted By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>