force-app/main/default/objects/Lead/fields/First_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Description__c</fullName>
    <label>Presales First Call Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>