force-app/main/default/objects/Lead/fields/First_Call_Proposed_DateOfVisit__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Proposed_DateOfVisit__c</fullName>
    <label>First Pre Next Call Proposed DateOfVisit</label>
    <type>DateTime</type>
</CustomField>