force-app/main/default/objects/Lead/fields/First_Sales_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Next_Action_Date__c</fullName>
    <label>First Sales Next Action Date</label>
    <type>DateTime</type>
</CustomField>