force-app/main/default/objects/Lead/fields/First_Sales_Next_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Next_Call_Attempt__c</fullName>
    <label>First Sales Next Call Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>