force-app/main/default/objects/Lead/fields/FOLLOW_UP_3rd__c.field-meta.xml
<CustomField>
    <fullName>FOLLOW_UP_3rd__c</fullName>
    <label>FOLLOW UP (3rd)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>