force-app/main/default/objects/Lead/fields/FormTracker__c.field-meta.xml
<CustomField>
    <fullName>FormTracker__c</fullName>
    <label>Form/Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>