force-app/main/default/objects/Lead/fields/Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>Hash_Value__c</fullName>
    <label>Hash Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>