force-app/main/default/objects/Lead/fields/How_Many_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Bedrooms__c</fullName>
    <label>How Many Bedrooms</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>